chore: progress in the related work

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -15,6 +15,7 @@
 	Title = {Video of Chuck Norris walking on water},
 	url = {http://www.youtube.com/nonexistentlink}
 }
+## DIDS
 
 #did-core
  @misc{sporny_longley_sabadello_reed_steele_2021,
@@ -27,15 +28,59 @@
   month     = {Aug}
 } 
 
-# DIDComm
- @misc{curren_looker_terbu_2020,
-  title     = {Didcomm Messaging},
-  url       = {https://identity.foundation/didcomm-messaging/spec},
-  journal   = {DIDComm Messaging Specification},
-  publisher = {DIF},
-  year      = {2020},
+# did:ethr spec
+ @misc{nistor_grassberger_carlin_2022,
+  title     = {ETHR DID Method Specification},
+  url       = {https://github.com/decentralized-identity/ethr-did-resolver/blob/master/doc/did-method-spec.md},
+  journal   = {GitHub},
+  publisher = { Decentralized Identity Foundation},
+  author    = {Nistor, Mircea and Grassberger, Peter and Carlin, Zachary},
+  year      = {2022},
+  month     = {Jun}
+} 
+
+# did:key spec
+ @misc{longley_zagidulin_sporny_2022,
+  title     = {The did:key Method v0.7},
+  url       = {https://w3c-ccg.github.io/did-method-key/},
+  journal   = {The did:key method v0.7},
+  publisher = {W3C},
+  author    = {Longley, Dave and Zagidulin, Dmitri and Sporny, Manu},
+  year      = {2022},
   month     = {May}
 } 
+
+#Uport Whitepaper
+ @article{Lundkvist_Heck_Torstensson_Mitton_Sena_2016,
+  title    = {UPORT: A PLATFORM FOR SELF-SOVEREIGN IDENTITY},
+  author   = {Lundkvist, Dr Christian and Heck, Rouven and Torstensson, Joel and Mitton, Zac and Sena, Michael},
+  year     = {2016},
+  pages    = {16},
+  language = {en}
+}
+
+#Tawki
+@inproceedings{8783188,
+  author    = {Westerkamp, Martin and Göndör, Sebastian and Küpper, Axel},
+  booktitle = {2019 IEEE International Conference on Decentralized Applications and Infrastructures (DAPPCON)},
+  title     = {Tawki: Towards Self-Sovereign Social Communication},
+  year      = {2019},
+  volume    = {},
+  number    = {},
+  pages     = {29-38},
+  doi       = {10.1109/DAPPCON.2019.00014}
+}
+
+# Sidetree spec
+ @misc{buchner_steele_ronda_2021,
+  title   = {Sidetree v1.0.0},
+  url     = {https://identity.foundation/sidetree/spec/},
+  journal = {DIF Sidetree Protocol},
+  author  = {Buchner, Daniel and Steele, Orie and Ronda, Troy},
+  year    = {2021},
+  month   = {Jan}
+} 
+
 
 # ActivityPub
  @misc{lemmer-webber_tallon_guy_prodromou_2018,
@@ -133,3 +178,70 @@
   year      = {2020},
   month     = {Jan}
 } 
+
+# SSI Book
+ @book{preukschat_reed_2021,
+  place     = {Shelter Island, NY},
+  title     = {Self-sovereign identity decentralized digital identity and verifiable credentials},
+  publisher = {O'REILLY MEDIA},
+  author    = {Preukschat, Alex and Reed, Drummond},
+  year      = {2021}
+} 
+
+
+## DIDCOMM
+
+# DIDComm Spec
+ @misc{curren_looker_terbu_2020,
+  title     = {Didcomm Messaging},
+  url       = {https://identity.foundation/didcomm-messaging/spec},
+  journal   = {DIDComm Messaging Specification},
+  publisher = {DIF},
+  year      = {2020},
+  month     = {May}
+} 
+
+## Understanding Didcomm
+
+ @misc{young_2020,
+  title     = {Understanding DIDComm},
+  url       = {https://medium.com/decentralized-identity/understanding-didcomm-14da547ca36b},
+  journal   = {Medium},
+  publisher = {Decentralized Identity Foundation},
+  author    = {Young, Kaliya},
+  year      = {2020},
+  month     = {Sep}
+} 
+
+#Hyperledger Wiki
+ @misc{jones_boswell_2022,
+  title   = {Hyperledger - Hyperledger},
+  url     = {https://wiki.hyperledger.org/},
+  journal = {Hyperledger Foundation},
+  author  = {Jones, Ry and Boswell, David},
+  year    = {2022},
+  month   = {Jul}
+} 
+
+#Hyperledger Paper
+ @misc{lusard_lehors_muscara_boswell_zsigri_2021,
+  title   = {An overview of Hyperledger Foundation},
+  url     = {https://www.hyperledger.org/wp-content/uploads/2021/11/HL_Paper_HyperledgerOverview_102721.pdf},
+  journal = {Hyperledger},
+  author  = {Lusard, Anthony and Le Hors, Arnaud and Muscara, Bobbi and Boswell, David and Zsigri, Csilla},
+  year    = {2021},
+  month   = {Oct}
+}
+
+# Algorithm Paper
+
+@incollection{Abramson_2020,
+  doi       = {10.1007/978-3-030-58986-8_14},
+  url       = {https://doi.org/10.1007%2F978-3-030-58986-8_14},
+  year      = 2020,
+  publisher = {Springer International Publishing},
+  pages     = {205--220},
+  author    = {Will Abramson and Adam James Hall and Pavlos Papadopoulos and Nikolaos Pitropakis and William J. Buchanan},
+  title     = {A Distributed Trust Framework for Privacy-Preserving Machine Learning},
+  booktitle = {Trust, Privacy and Security in Digital Business}
+}
