--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -48,6 +48,9 @@ TCP
 	pdfsubject={Thesis Subject}
 }
 
+\usepackage{algpseudocode}
+\usepackage{algorithm}
+
 % Adding a finite stretch on the page suppresses "Underfull \vbox (badness 10000)" warnings.
 \makeatletter
 \def\@textbottom{\vskip \z@ \@plus 1pt}
